test-suite/tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/multiple_wrong_elements_in_list/input.essence:2:15:
  |
2 | such that sum([x, y, z]) = 15
  |               ^^^^^^^^^
Type error:
	Expected: "Integer elements"
	Got: bool
